# NESTRIS

./: CMakeLists.txt  README.md
SFML-2.5.x/src/SFML/Graphics/: Font.cpp
include/: ActiveInputs.hpp  Audio.hpp  ConfigReader.hpp  DelayManager.hpp  Engine.hpp  GameplayContainer.hpp  Input.hpp  LevelLines.hpp  MatrixContainer.hpp  Piece.hpp  PieceContainer.hpp  RenderHighScore.hpp  RenderPlayField.hpp  Score.hpp  Window.hpp  ntris.hpp
settings/: config.txt  keybinds0.ini  keybinds1.ini
src/: ActiveInputs.cpp  Audio.cpp  ConfigReader.cpp  ConsoleManager.cpp  Engine.cpp  GameplayContainer.cpp  Input.cpp  LevelLines.cpp  Log.cpp  MatrixContainer.cpp  OutputInfo.cpp  Piece.cpp  PieceContainer.cpp  RenderGameModeSelect.cpp  RenderHighScore.cpp  RenderLevelSelect.cpp  RenderPlayField.cpp  Renderer.cpp  Score.cpp  Sprite.cpp  Statistics.cpp  TextFormatter.cpp  TextWriter.cpp  TileContainer.cpp  TileRenderer.cpp  Window.cpp  ntris.cpp  random.cpp
